[package]
name = "ethernet"
version = "0.1.5"
edition = "2021"
description = "A parser for ethernet headers."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/ethernet"

[features]
alloc = []
default = ["alloc"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ethernet"
harness = false

[dependencies]
ether-type = "0.1.3"
mac-parser = "0.1.4"
scroll = { version = "0.12.0", default-features = false }
