[package]
name = "ethernet"
version = "0.1.6"
edition = "2021"
description = "A parser for ethernet headers."
authors = ["Frostie314159"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Frostie314159/ethernet"

[features]
alloc = []
default = ["alloc"]

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "ethernet"
harness = false

[dependencies]
ether-type = "0.1.5"
mac-parser = "0.2.0"
scroll = { version = "0.13.0", default-features = false }
